<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:gravity="center"
    tools:context=".ui.login.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:cardBackgroundColor="@color/cardLoginColor"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:text="Welcome to the Marvel HQ's"
                android:textColor="@color/white"
                android:textSize="28dp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="20dp"
                        android:textColorHint="@color/cardLoginColor"
                        app:boxStrokeColor="@color/inputLineColor"
                        app:boxBackgroundColor="@color/inputLineColor"
                        app:hintTextColor="@color/cardLoginColor">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/UserEmail_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@color/white"
                            android:hint="@string/userEmail"
                            android:textColorHint="@color/inputTextColor"
                            android:inputType="textWebEmailAddress"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="2dp"
                        android:textColorHint="@color/cardLoginColor"
                        app:boxStrokeColor="@color/inputLineColor"
                        app:boxBackgroundColor="@color/inputLineColor"
                        app:hintTextColor="@color/cardLoginColor">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/UserPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="10dp"
                            android:background="@color/white"
                            android:hint="@string/userPassword"
                            android:textColorHint="@color/inputTextColor"
                            android:textSize="18dp"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:text="@string/rememberCheckbox"
                        android:textSize="18dp"
                        android:textColor="@color/inputTextColor"
                        android:buttonTint="@color/cardLoginColor"
                        android:layout_marginBottom="20dp"/>

                    <Button
                        android:id="@+id/buttonLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginBottom="5dp"
                        android:backgroundTint="@color/cardLoginColor"
                        android:text="@string/loginText" />

                    <TextView
                        android:id="@+id/buttonCreateAccount"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        android:text="@string/createAccount"
                        android:textSize="18dp"
                        android:layout_gravity="center"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>