<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    tools:context=".ui.register.RegisterActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbarRegisterPage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarRegisterPage"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/cardLoginColor"
            app:navigationIcon="@drawable/ic_arrow_backsmall"
            app:title="Register"
            app:titleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="390dp"
        android:layout_above="@id/base"
        android:background="@drawable/shape_roundedcorners"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"/>

    <LinearLayout
        android:id="@+id/base"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardRegistrationInformation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_above="@id/base"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="13dp"
                android:layout_marginRight="10dp"
                android:textColorHint="@color/cardLoginColor"
                app:boxBackgroundColor="@color/inputLineColor"
                app:boxStrokeColor="@color/inputLineColor"
                app:hintTextColor="@color/cardLoginColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:hint="@string/userName"
                    android:textColorHint="@color/inputTextColor"
                    android:textSize="18dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:textColorHint="@color/cardLoginColor"
                app:boxBackgroundColor="@color/inputLineColor"
                app:boxStrokeColor="@color/inputLineColor"
                app:hintTextColor="@color/cardLoginColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerUserEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:hint="@string/userEmail"
                    android:inputType="textWebEmailAddress"
                    android:textColorHint="@color/inputTextColor"
                    android:textSize="18dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="2dp"
                android:layout_marginRight="10dp"
                android:textColorHint="@color/cardLoginColor"
                app:boxBackgroundColor="@color/inputLineColor"
                app:boxStrokeColor="@color/inputLineColor"
                app:hintTextColor="@color/cardLoginColor">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/registerUserPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/white"
                    android:hint="@string/userPassword"
                    android:inputType="textPassword"
                    android:textColorHint="@color/inputTextColor"
                    android:textSize="18dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@color/cardLoginColor"
                android:text="@string/saveText" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="115dp"
        android:layout_height="115dp"
        android:layout_marginBottom="20dp"
        android:layout_above="@id/cardRegistrationInformation"
        android:layout_centerHorizontal="true"
        android:background="@drawable/shape_circle">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="76dp"
            android:layout_height="76dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_userimage" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>